fixing carousel top position on tablet size screens. fixing homepage tile links. reordered info subnav. fixed subnav current page highlighting on projects/info

--- a/app/assets/stylesheets/collections.css.scss
+++ b/app/assets/stylesheets/collections.css.scss
@@ -486,17 +486,13 @@ body.collections div.imgcontainer {
 
 	.collection #items {
 		position: fixed;
-		top: 159px;
+		top: 181px;
 		left: 22px;
 		right: 22px;
 		bottom: 22px;
 		width: auto;
 		float: none;
 		margin: 0;
-	}
-
-	.collection #items {
-		top: 181px;
 	}
 
 	.collections section,
@@ -562,7 +558,7 @@ body.collections div.imgcontainer {
 	}
 	.collection #items {
 		position: fixed;
-		top: 145px;
+		top: 167px;
 		left: 7px;
 		right: 7px;
 		bottom: 7px;
